// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`make: compiles configuration to path 1`] = `
"repos:
  prisma-test-utils:
    config:
      removeUnconfiguredLabels: true
    labels:
      bug/0-needs-reproduction:
        color: '#ff0022'
        alias: []
        siblings: []
"
`;

exports[`make: integration test: compiles configuration to default path 1`] = `
"repos:
  prisma-test-utils:
    config:
      removeUnconfiguredLabels: true
    labels:
      type/bug:
        color: '#ff0022'
        alias: []
        siblings: []
      bug/1-has-reproduction:
        color: '#ff0022'
        description: Indicates that an issue has reproduction
        alias:
          - bug
        siblings:
          - kind/bug
      kind/bug:
        color: '#02f5aa'
        alias: []
        siblings: []
  changed:
    config:
      removeUnconfiguredLabels: true
    labels:
      bug/1-has-reproduction:
        color: '#ff0022'
        description: Indicates that an issue has reproduction
        alias:
          - bug
        siblings:
          - kind/bug
      kind/bug:
        color: '#02f5aa'
        alias: []
        siblings: []
"
`;

exports[`make: integration test: compiles configuration to default path 2`] = `
Object {
  "repos": Object {
    "changed": Object {
      "config": Object {
        "removeUnconfiguredLabels": true,
      },
      "labels": Object {
        "bug/1-has-reproduction": Object {
          "alias": Array [
            "bug",
          ],
          "color": "ff0022",
          "description": "Indicates that an issue has reproduction",
          "siblings": Array [
            "kind/bug",
          ],
        },
        "kind/bug": Object {
          "alias": Array [],
          "color": "02f5aa",
          "siblings": Array [],
        },
      },
    },
    "prisma-test-utils": Object {
      "config": Object {
        "removeUnconfiguredLabels": true,
      },
      "labels": Object {
        "bug/1-has-reproduction": Object {
          "alias": Array [
            "bug",
          ],
          "color": "ff0022",
          "description": "Indicates that an issue has reproduction",
          "siblings": Array [
            "kind/bug",
          ],
        },
        "kind/bug": Object {
          "alias": Array [],
          "color": "02f5aa",
          "siblings": Array [],
        },
        "type/bug": Object {
          "alias": Array [],
          "color": "ff0022",
          "siblings": Array [],
        },
      },
    },
  },
}
`;
